V4.7.0 - added many planes
